<resources>
    <string name="app_name">Smart shopping list</string>
    <string name="facebook_app_id">563305564038229</string>
    <string name="sign_in">sign in</string>
    <string name="fb_login_protocol_scheme">fb563305564038229</string>
    <string name="btn_forgot_password">forgot password</string>
    <string name="lbl_forgot_password">forgot password</string>
    <string name="forgot_password_msg">forgot password</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back">Back</string>
    <string name="enter_email">Enter email</string>
    <string name="instructions">We have sent email with instructions to reset password</string>
    <string name="retry">Error please retry</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="pass_short">Password too short</string>
    <string name="user_exist">User already exists</string>
    <string name="btn_login">login</string>
    <string name="btn_link_to_register">don\'t have an account? Register now</string>
    <string name="enter_emailb">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already">Already have account sign me in</string>
    <string name="continuee">Continue</string>
    <string name="empty">Please Enter your nickname</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="action_settings">Settings</string>
    <string name="defaultlist">Supermarket list</string>
    <string name="lists">my lists</string>
    <string name="add">Add new list</string>
    <string name="list_name">Enter list name</string>
    <string name="action_search">search</string>
    <string name="action_location_found">Reminders</string>
    <string name="edit">Edit</string>
    <string name="no_items">Your shopping cart is empty please add new items</string>
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="ringer_permissions">Ringer Permissions</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>
    <string name="save">Save</string>
    <string name="select">Select list to be notified</string>
    <string name="delete">Delete</string>
    <string name="sure">\"Are you sure you want to delete this Geofence ?\"</string>
    <string name="launch">You have reached the supermarket press here to see your list</string>
    <string name="bills">invoices</string>
    <string name="uploaded">Uploaded on:</string>
    <string name="n_uploaded">Click to upload</string>
    <string name="quantity">Quantity</string>
    <string name="category">Catergory</string>
    <string name="price">Price</string>
    <string name="comments">notes</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="not_found">No items found</string>
    <string name="tool">Smart cart</string>
    <string name="empty_pr">Product must not be empty</string>
    <string name="share">List users</string>
    <string name="add_new">Add new user</string>
    <string name="username">Username</string>
    <string name="please_note">Please note you can only add users that already registered to the app you will have to ask them for their username. If you want to invite them to the app press here.</string>
    <string name="unm">Username not found please try again</string>
    <string name="in">Name must not be empty</string>
    <string name="share_list">Share this list</string>
    <string name="share_as">Share as plain text</string>
    <string name="shares">Share</string>
    <string name="success">Invitation sent succssfully!</string>
    <string name="unt">unit</string>
    <string name="sharee">Share App</string>
    <string name="settings">Settings</string>
    <string name="user_set">User settings</string>
    <string name="change_user">Enter new username</string>
    <string name="log_out">Log out</string>
    <string name="policy">Privacy policy</string>
    <string name="n_i">Enter new product</string>

    <string-array name="colors">

        <item name="yellow">#FFFF00</item>
        <item name="fuchsia">#FF00FF</item>
        <item name="red">#FF0000</item>
        <item name="silver">#C0C0C0</item>
        <item name="gray">#808080</item>
        <item name="olive">#808000</item>
        <item name="purple">#800080</item>
        <item name="maroon">#800000</item>
        <item name="aqua">#00FFFF</item>
        <item name="lime">#00FF00</item>
        <item name="teal">#008080</item>
        <item name="green">#008000</item>
        <item name="blue">#0000FF</item>
        <item name="navy">#000080</item>
        <item name="black">#000000</item>
        <item name="white">#FFFFFF</item>
    </string-array>
   <string-array name="units">
       <item name="1">unit</item>
       <item name="2">kilogram</item>
       <item name="3">litter</item>
       <item name="4">bottle</item>
       <item name="5">box</item>
       <item name="6">Oncology</item>
       <item name="7">pound</item>
       <item name="8">handful</item>
       <item name="9">case</item>
       <item name="10">cup</item>
       <item name="11">gallon</item>
       <item name="12">inch</item>
       <item name="13">miligram</item>
       <item name="14">pack</item>

   </string-array>
<string-array name="categories">
    <item name="1">"select category"</item>
    <item name="2">"animals"</item>
    <item name="3">"organic and health"</item>
    <item name="4">"cereals and grains"</item>
    <item name="5">"beauty and care"</item>
    <item name="6">"babies products "</item>
    <item name="7">"ready to eat meals"</item>
    <item name="8">"frozen beverages and ice cream"</item>
    <item name="9">"froze vegetables"</item>
    <item name="10">"frozen dough products"</item>
    <item name="11">"hot dogs"</item>
    <item name="12">"packed salads"</item>
    <item name="13">"bread and pastry"</item>
    <item name="14">"candy and chocolate"</item>
    <item name="15">"salt"</item>
    <item name="16">"sweet spreads"</item>
    <item name="17">"paper and tissue"</item>
    <item name="20">"cleaning products"</item>
    <item name = "21"> "Washing preparations" </item>
      <item name = "22"> "Soups and dishes" </item>
       <item name = "23"> "Noodle and Pasta" </item>
         <item name = "24"> "Sauces and Spices" </item>
         <item name = "25"> "Basic Products" </item>
         <item name = "26"> "Canned" </item>
         <item name = "27"> "Chicken and Fish" </item>
         <item name = "28"> "Drinks" </item>
         <item name = "29"> "Vegetables and fruits" </item>
         <item name = "30"> "Dairy" </item>
         <item name = "31"> "Dried fruits and nuts" </item>
         <item name = "32"> "Other" </item>

</string-array>

</resources>
