<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    <item android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/action_location_found"
        app:showAsAction="always" />
     <item android:id="@+id/menu_list"
         android:icon="@drawable/mnu"
         android:title="menu"
         app:showAsAction="always"
       />


</menu>