<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_grey"
   >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:background="@color/amber">
    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:hint="@string/list_name"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="133dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <RelativeLayout
        android:id="@+id/rlv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <ImageView
            android:id="@+id/ass"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/adduser" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ass"
            android:text="@string/add_new"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlv4"
        app:layout_constraintVertical_bias="0.0">

    </ListView>
</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>