<?xml version="1.0" encoding="utf-8"?>

        <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


             <include
                layout="@layout/app_bar_menu_drawer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            </FrameLayout>
            <android.support.design.widget.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"


               >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btns">
                    <include
                        android:id="@+id/navigation_drawer_header_include"
                        layout="@layout/nav_header_menu_drawer" />

                    <TextView
                       android:layout_below="@+id/navigation_drawer_header_include"

                        android:layout_width="match_parent"
                       android:id="@+id/txt"
                        android:layout_height="wrap_content"
                       android:background="@color/gray"
                       android:text="@string/lists"/>
                    <ListView

                        android:id="@+id/drawer_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/txt"
                        android:layout_marginBottom="100dp">

                    </ListView>

                    <Button
                        android:id="@+id/button13"
                        android:textAlignment="viewStart"
                        android:gravity="start|center"
                        android:background="@color/colorPrimary"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/sharee" />

                    <Button
                        android:textAlignment="viewStart"
                        android:gravity="start|center"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:id="@+id/button14"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_above="@+id/button13"
                        android:layout_centerHorizontal="true"
                        android:text="@string/settings" />


                </RelativeLayout>
                </android.support.design.widget.NavigationView>
        </android.support.v4.widget.DrawerLayout>

